--- a/template.ipynb
+++ b/template.ipynb
@@ -1,9 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0c5b51c5",
+   "metadata": {},
+   "source": [
+    "## Day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2cb4874a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76xkqjzqtwonfour\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('inputs/input', 'r') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "lines = [line.strip() for line in lines]\n",
+    "print(lines[0])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5504393",
+   "id": "575d47c1",
    "metadata": {},
    "outputs": [],
    "source": []
