--- a/day_01.ipynb
+++ b/day_01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "2cb4874a",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46669   36559\n"
+      "['46669   36559', '54117   62675', '25659   15179', '18867   82784', '94354   78485']\n"
      ]
     }
    ],
@@ -27,12 +27,12 @@
     "    lines = f.readlines()\n",
     "\n",
     "lines = [line.strip() for line in lines]\n",
-    "print(lines[0])"
+    "print(lines[0:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "36426f7a",
    "metadata": {},
    "outputs": [],
@@ -49,9 +49,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01cd3ade",
+   "metadata": {},
+   "source": [
+    "## Part 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "575d47c1",
+   "execution_count": 3,
+   "id": "7a884008",
    "metadata": {},
    "outputs": [
     {
@@ -64,17 +72,27 @@
    ],
    "source": [
     "# PART 1\n",
+    "import numpy as np\n",
     "\n",
-    "total_distance = 0\n",
-    "for i in range(len(right)):\n",
-    "    distance = abs(int(left[i]) - int(right[i]))\n",
-    "    total_distance += distance\n",
-    "print(total_distance)"
+    "left_array = np.array(left, dtype=int)\n",
+    "right_array = np.array(right, dtype=int)\n",
+    "\n",
+    "total_distance = np.sum(np.abs(left_array - right_array))\n",
+    "\n",
+    "print(total_distance)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31bfe0a3",
+   "metadata": {},
+   "source": [
+    "## Part 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "1c175eb8",
    "metadata": {},
    "outputs": [
@@ -87,14 +105,11 @@
     }
    ],
    "source": [
-    "# PART 2\n",
     "right_dict = {}\n",
     "\n",
     "for num in right:\n",
-    "    if num in right_dict:\n",
-    "        right_dict[num] += 1\n",
-    "    else:\n",
-    "        right_dict[num] = 1\n",
+    "    if num not in right_dict:\n",
+    "        right_dict[num] = right.count(num)\n",
     "\n",
     "total_sim_score = 0\n",
     "for num in left:\n",
