--- a/template.ipynb
+++ b/template.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "2cb4874a",
    "metadata": {},
    "outputs": [
@@ -18,22 +18,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "76xkqjzqtwonfour\n"
+      "['3   4', '4   3', '2   5', '1   3', '3   9']\n"
      ]
     }
    ],
    "source": [
-    "with open('inputs/input', 'r') as f:\n",
+    "with open('inputs/test.txt', 'r') as f:\n",
     "    lines = f.readlines()\n",
     "\n",
     "lines = [line.strip() for line in lines]\n",
-    "print(lines[0])"
+    "print(lines[0:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbc5cb4f",
+   "metadata": {},
+   "source": [
+    "## Part 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "575d47c1",
+   "id": "7845a414",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7808aa28",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d7ba686",
    "metadata": {},
    "outputs": [],
    "source": []
