--- a/day_01.ipynb
+++ b/day_01.ipynb
@@ -5,7 +5,8 @@
    "id": "0c5b51c5",
    "metadata": {},
    "source": [
-    "## Day 1"
+    "## Day 1\n",
+    "https://adventofcode.com/2024/day/1"
    ]
   },
   {
@@ -18,7 +19,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['46669   36559', '54117   62675', '25659   15179', '18867   82784', '94354   78485']\n"
+      "['46669   36559', '54117   62675', '25659   15179', '18867   82784', '94354   78485']\n",
+      "['57840   33284', '60040   82705', '10256   95591', '49049   90283', '37768   43279']\n"
      ]
     }
    ],
@@ -27,7 +29,8 @@
     "    lines = f.readlines()\n",
     "\n",
     "lines = [line.strip() for line in lines]\n",
-    "print(lines[0:5])"
+    "print(lines[:5])\n",
+    "print(lines[-5:])"
    ]
   },
   {
@@ -40,7 +43,7 @@
     "left = []\n",
     "right = []\n",
     "for line in lines:\n",
-    "    part1, part2 = line.split(\"   \")\n",
+    "    part1, part2 = line.split()\n",
     "    left.append(part1)\n",
     "    right.append(part2)\n",
     "\n",
@@ -71,7 +74,6 @@
     }
    ],
    "source": [
-    "# PART 1\n",
     "import numpy as np\n",
     "\n",
     "left_array = np.array(left, dtype=int)\n",
@@ -121,14 +123,6 @@
     "\n",
     "print(total_sim_score)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44fccdad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
