--- a/template.ipynb
+++ b/template.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "2cb4874a",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['3   4', '4   3', '2   5', '1   3', '3   9']\n"
+      "['3   4', '4   3', '2   5', '1   3', '3   9']\n",
+      "['4   3', '2   5', '1   3', '3   9', '3   3']\n"
      ]
     }
    ],
@@ -27,7 +28,8 @@
     "    lines = f.readlines()\n",
     "\n",
     "lines = [line.strip() for line in lines]\n",
-    "print(lines[0:5])"
+    "print(lines[:5])\n",
+    "print(lines[-5:])"
    ]
   },
   {
